--- a/home.html
+++ b/home.html
@@ -137,7 +137,7 @@
                 canvas.addEventListener('touchmove', sketchpad_touchMove, false);
             }
             
-            model = await tf.loadModel('https://nitinbahuguna.github.io/mnist/model.json');
+            model = await tf.loadModel('https://gauravroy48.github.io/MNIST-Interactive-Website/model.json');
            
            console.log(model);
         }
